# Django-practical-test

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
CVProject/: celery.py  settings.py  urls.py
audit/: middleware.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/templates/audit/: request_log_list.html
audit/tests/: conftest.py
audit/tests/integration/: test_middleware.py  test_views.py
audit/tests/unit/: test_models.py
main/: context_processors.py  models.py  serializers.py  tasks.py  translation.py  urls.py  utils.py  views.py
main/fixtures/: sample_cv.json
main/migrations/: 0001_initial.py
main/templates/main/: base.html  cv_detail.html  cv_list.html  settings.html
main/templates/main/email/: cv_email.html
main/tests/integration/: test_api.py  test_settings.py  test_views.py
main/tests/unit/: test_models.py  test_pdf.py
templates/registration/: login.html
templates/rest_framework/: base.html  login.html
tests/: test_pdf.py
