[project]
name = "cvproject"
version = "0.1.0"
description = "CV Project"
authors = [
    {name = "Mykola Yefremov"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "pyppeteer (>=1.0.2)"
]

[tool.poetry]
packages = [
    { include = "main" },
    { include = "CVProject" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
