[project]
name = "cvproject"
version = "0.1.0"
description = "CV Project"
authors = [
    {name = "Mykola Yefremov"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "pyppeteer (>=1.0.2)",
    "openai (>=1.0.0)",
    "python-dotenv (>=1.0.0)"
]

[tool.poetry]
packages = [
    { include = "main" },
    { include = "CVProject" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-django = "^4.8.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "CVProject.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=main --cov-report=term-missing"
